# pyMailcowAliasesBot

./: .env.example  .env.fish.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
docs/: ANALYSIS.md
tests/: test_sqlite.py
tg_mailcow_aliases/: api.py  bot.py  sqlite.py
tg_mailcow_aliases/scripts/: add_user.py  create_table.py  delete_user.py  get_all_users.py  is_user_exists.py  start.py
