[tool.poetry]
name = "tg-mailcow-aliases"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tg_mailcow_aliases"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
telebot = "^0.0.5"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pytest-mock = "^3.11.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "tg_mailcow_aliases.scripts.start:main"